using evt-listen mixin

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,6 +1,6 @@
 <todo-app>
-  <todo-header slot="header"></todo-header>
-  <todo-list slot="list"></todo-list>
+  <todo-header onsubmit='form' slot="header"></todo-header>
+  <todo-list onsubmit='form' slot="list"></todo-list>
   <todo-footer slot="footer"></todo-footer>
 </todo-app>
 <todo-app-footer></todo-app-footer>
